# mnemos

./: .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.bat  server.sh
.claude/agents/: mnemos.md
.claude/agents/mnemos/: AGENT.md  SKILL.md
scripts/: extract_knowledge.py  gap_analysis.py  seed_memory.py  validate_knowledge.py
src/: container_ship_loading.py  delivery_route_optimizer.py  ride_sharing_matching.py  server_log_gap_finder.py
src/mnemos/: __init__.py  server.py
src/mnemos/dashboard/: app.py  routes.py  ws.py
src/mnemos/dashboard/static/: index.html
src/mnemos/dashboard/static/css/: dashboard.css
src/mnemos/dashboard/static/js/: charts.js  dashboard.js
src/mnemos/knowledge/: __init__.py  complexities.extracted.json  complexities.json  decision_rules.extracted.json  decision_rules.json  graph_loader.py  loader.py  structures.extracted.json  structures.json
src/mnemos/memory/: graph_store.py  schemas.py  store.py
src/mnemos/tools/: __init__.py  _shared.py  bootstrap_context.py  log_decision.py  plan_algorithm.py  review_complexity.py  suggest_refactor.py
tests/: __init__.py
tests/benchmarks/: REAL_AB_TEST.md
tests/benchmarks/findings/: RESEARCH_FINDINGS.md
tests/test_knowledge/: test_graph_loader.py  test_loader.py  test_validation.py
tests/test_memory/: test_store.py
tests/test_tools/: test_bootstrap_context.py  test_log_decision.py  test_plan_algorithm.py  test_review_complexity.py
