[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemos"
version = "0.1.0"
description = "Algorithmic Reasoning Memory for LLMs — MCP server providing structure-centric algorithm/DS recommendations"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Reza Malik" },
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "beautifulsoup4>=4.12",
    "ollama>=0.4",
    "httpx>=0.27",
]

[project.scripts]
mnemos = "mnemos.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
